tests/common/compile-error/04_js_undefined_identifier.fjs
@@[target("javascript")]

// NEGATIVE TEST: Frame must NOT auto-define or rewrite an undefined
// identifier in native code. Author wrote `return unknown_var` —
// `unknown_var` is not declared anywhere. Node's V8 runtime rejects
// with ReferenceError at runtime.
//
// If this starts PASSING (the script runs without error), framec
// has silently added a symbol to paper over an author mistake — a
// passthrough-contract regression.

@@system NegJsIdent {
    interface:
        probe(): number

    machine:
        $Ready {
            probe(): number {
                return unknown_var
            }
        }
}

new NegJsIdent().probe();
